; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/core/extr_gpuobj.c_nvkm_gpuobj_rd32.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/core/extr_gpuobj.c_nvkm_gpuobj_rd32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_gpuobj = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.nvkm_gpuobj*, i64)* @nvkm_gpuobj_rd32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @nvkm_gpuobj_rd32(%struct.nvkm_gpuobj* %0, i64 %1) #0 {
  %3 = alloca %struct.nvkm_gpuobj*, align 8
  %4 = alloca i64, align 8
  store %struct.nvkm_gpuobj* %0, %struct.nvkm_gpuobj** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.nvkm_gpuobj*, %struct.nvkm_gpuobj** %3, align 8
  %6 = getelementptr inbounds %struct.nvkm_gpuobj, %struct.nvkm_gpuobj* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 8
  %8 = load %struct.nvkm_gpuobj*, %struct.nvkm_gpuobj** %3, align 8
  %9 = getelementptr inbounds %struct.nvkm_gpuobj, %struct.nvkm_gpuobj* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* %4, align 8
  %14 = add nsw i64 %12, %13
  %15 = call i64 @nvkm_ro32(i32 %7, i64 %14)
  ret i64 %15
}

declare dso_local i64 @nvkm_ro32(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
